16-ServicesIngressAndNetworkingFundamentals/06-DeployingNGINXIngressAndBasicRouting/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-api
spec:
  type: ClusterIP      # The default type, internal only
  selector:
    app: web-app
  ports:
  - port: 80           # Service port
    targetPort: 80     # Container port
