16-ServicesIngressAndNetworkingFundamentals/06-DeployingNGINXIngressAndBasicRouting/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx # Explicitly tell Kubernetes to use the NGINX controller
  rules:
  - host: demo.kube.com    # The hostname to match
    http:
      paths:
      - path: /           # Catch-all path
        pathType: Prefix
        backend:
          service:
            name: internal-api # The ClusterIP Service to forward traffic to
            port:
              number: 80
